--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="<%= VUE_APP_DESCRIPTION %>">
     <meta name="author" content="<%= VUE_APP_AUTHOR %>">
     <title><%= VUE_APP_NAME %></title>
-    <link rel="icon" type="image/x-icon" href="<%= VUE_APP_ADMIN_URL %>/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,300,400,500,700,900&display=swap&subset=japanese">
     <link rel="stylesheet" href="<%= BASE_URL %>vendor/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="<%= BASE_URL %>vendor/animate.css/animate.min.css">
