change vendor to vendors

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <title><%= VUE_APP_NAME %></title>
     <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap">
-    <link rel="stylesheet" href="<%= BASE_URL %>vendor/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>vendor/animate.css/animate.min.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>vendor/flag-icon-css/css/flag-icon.min.css">
-    <link rel="stylesheet" href="<%= BASE_URL %>vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>vendors/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>vendors/animate.css/animate.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>vendors/flag-icon-css/css/flag-icon.min.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>vendors/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/style.min.css">
 </head>
 <body>
@@ -23,10 +23,10 @@
 <div id="app-initializing" class="page-popping">
     <i class="fas fa-circle-notch fa-spin"></i>
 </div>
-<script src="<%= BASE_URL %>vendor/jquery/jquery.min.js"></script>
-<script src="<%= BASE_URL %>vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="<%= BASE_URL %>vendor/jquery.easing/jquery.easing.min.js"></script>
-<script src="<%= BASE_URL %>vendor/blueimp-canvas-to-blob/canvas-to-blob.min.js"></script>
+<script src="<%= BASE_URL %>vendors/jquery/jquery.min.js"></script>
+<script src="<%= BASE_URL %>vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="<%= BASE_URL %>vendors/jquery.easing/jquery.easing.min.js"></script>
+<script src="<%= BASE_URL %>vendors/blueimp-canvas-to-blob/canvas-to-blob.min.js"></script>
 <!-- built files will be auto injected -->
 </body>
 </html>
